bk_ida/gccida/c3/debug_reload_to_stream
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/debug_reload_to_stream/src/reload.c:7385:22: error: use of undeclared identifier 'reg_class_names_0'; did you mean 'reg_class_names'?
fprintf( v1, "%s, ", reg_class_names_0[*( ( int *)v2 - 20)]); 
                     ^~~~~~~~~~~~~~~~~
                     reg_class_names
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/debug_reload_to_stream/src/reload.c:6884:27: note: 'reg_class_names' declared here
static const char * const reg_class_names[] = REG_CLASS_NAMES;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/debug_reload_to_stream/src/reload.c:7463:51: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
fprintf( v1, "%ssecondary_in_icode = %s", "\n\t", insn_data_0[v8].name); 
                                                  ^~~~~~~~~~~
                                                  insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/debug_reload_to_stream/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/debug_reload_to_stream/src/reload.c:7468:48: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
fprintf( v1, "%ssecondary_out_icode = %s", v9, insn_data_0[v10].name); 
                                               ^~~~~~~~~~~
                                               insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/debug_reload_to_stream/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/debug_reload_to_stream/src/obj/reload.o] Error 1
